--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,184 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat';
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: #131212;
+  color: #f2f2f2
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  text-align: center;
+  margin: .5em;
+  font-size: clamp(3.5rem, 10vw - 2rem, 4rem);
+  font-weight: 900;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+h1 span {
+  background-clip: text;
+  color: transparent;
+  word-break: break-word;
+}
+
+h1 b {
+  text-decoration: underline;
+}
+
+h1 span:nth-child(2) {
+  background-image: linear-gradient(to right, #fdc830, #f37335);
+}
+
+h1 span:nth-child(4) {
+  background-image: linear-gradient(to right, #36d1dc, #5b86e5);
+}
+
+section {
+  width: 90%;
+  margin: auto;
+  display: flex;
+  gap: 5em;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 2em 0;
+}
+
+section h5 {
+  font-size: 2.5em;
+  background: #000;
+  padding: .5em;
+  border-radius: 5px;
+  flex: 1;
+  word-break: break-all;
+  display: block;
+  min-width: 300px;
+  margin: auto;
+}
+
+h5 span {
+  color: #36d1dc;
+}
+
+.container-auth {
+  flex: 1;
+  border: 2px solid #8a8888;
+  border-radius: 10px;
+  padding: 1em;
+  background-color: rgba(0, 0, 0, 0.411);
+  box-shadow: 10px 15px 25px #1b1b1b;
+}
+
+.container-auth h2 {
+  font-size: bold;
+  text-align: center;
+  margin: auto auto 1.5em auto;
+  border-bottom: 2px solid rgb(117, 117, 117);
+  padding-bottom: .3em;
+  width: 80%;
+}
+
+.container-auth form {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  margin: 1em 0;
+}
+
+form input {
+  font-size: 1.2em;
+  padding: .5em;
+  border-radius: 5px;
+  width: 100%;
+  min-width: 200px
+}
+
+
+form .container-buttons {
+  gap: 1em;
+  margin: 1em auto auto auto;
+  flex-wrap: wrap;
+  display: flex;
+  width: 100%;
+}
+
+
+.container-buttons button,
+section button {
+  font-size: 1.1em;
+  padding: .8em;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border: none;
+  border-radius: 5px;
+  transition: all .5s ease-in-out;
+  color: #fff;
+  font-weight: bold;
+  flex: 1;
+  min-width: 100px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.container-buttons button:hover,
+section button:hover {
+  transform: scale(1);
+}
+
+.container-buttons button:active,
+section button:active {
+  transform: scale(.9);
+}
+
+.container-buttons button:nth-child(1) {
+  background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+
+}
+
+.container-buttons button:nth-child(1):hover {
+  background-image: linear-gradient(135deg, #526bd8 0%, #694092 100%);
+}
+
+.container-buttons button:nth-child(2) {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.15) 0%, rgba(0, 0, 0, 0.15) 100%), radial-gradient(at top center, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.40) 120%) #989898;
+  background-blend-mode: multiply, multiply;
+}
+
+.container-buttons button:nth-child(2):hover {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.15) 0%, rgba(0, 0, 0, 0.15) 100%), radial-gradient(at top center, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.588) 120%) #989898;
+}
+
+section button {
+  background: rgb(226, 38, 38);
+  flex: none;
+}
+
+section button:hover {
+  background: red;
+}
+
+.loading {
+  background-color: rgba(7, 2, 12, 0.342);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.loading span {
+  animation: fadeIn .5s infinite linear alternate;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: .2;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
+
+  100% {
+    opacity: 1;
   }
 }
